Apparence page de connexion

--- a/index.html
+++ b/index.html
@@ -8,37 +8,56 @@
 	<title>MEDILOG</title>
 </head>
 <body>
-	<div class="container-fluid h-100 ">
+	<div class="container-fluid h-100  text-white">
 		<div class="row h-100">
 			<!-- Menu -->
-			<div class="col-md-1 d-flex flex-column gap-3 alert-info h-100 align-items-center">
-				<div class="caseSize p-5 alert-warning align-items-center text-center">
-					dqsd
+			<div class="col-md-1 d-flex flex-column gap-3 blue h-100 align-items-center">
+				<div class="caseSize p-5 green align-items-center text-center border-1">
+
 				</div>
-				<div class="caseSize p-5 alert-warning align-items-center text-center">
-					dqsd
+				<div class="caseSize p-5 green align-items-center text-center border-1">
+
 				</div>
-				<div class="caseSize p-5 alert-warning align-items-center text-center">
-					dqsd
+				<div class="caseSize p-5 green align-items-center text-center border-1">
+
 				</div>
 			</div>
 			<!-- Main page -->
-			<div class="col-md-11 h-100">
+			<div class="col-md-11 h-75">
 				<!-- Bandeau outils -->
 
-				<div class="row h-15 align-items-center alert-success">
-					<span class=""> Page d'Accueil </span>
+				<div class="row h-15 align-items-center green">
+					<span class="fs-1"> Page d'Accueil </span>
 				</div>
 				<!-- content -->
-				<div class="col-md-12 alert-danger h-100">
-					dqsd
+				<div class="row h-100 align-items-center text-center">
+					<!-- Portail de connexion -->
+					<div class="container ">
+						<div class="row justify-content-center">
+							<div class="col-md-4 green border-2 p-5">
+								<form class="d-flex flex-column gap-3">
+									<span class="fs-1"> Connexion a <u>MEDILOG</u> </span>
+
+
+									<div class=""><img src="res/iaccount.svg" class="sizeIcon"><input type="text" placeholder="Identifiant" class="border-1 w-75 pt-2 pb-2">  </input></div>
+
+									<div><img src="res/ipassword.svg" class="sizeIcon"><input type="password" placeholder="Mot de passe" class="border-1 w-75 pt-2 pb-2"></input></div>
+
+									<div><button class="w-50 border-1 text-green fs-3"><u> Valider </u></button></div>
+									<a class="fs-6 text-white"> Mot de passe oublier </a>
+								</form>
+							</div>
+
+						</div>
+
+					</div>
 				</div>
 			</div>
 
 		</div>
-		
-		
-		
+
+
+
 	</div>
 </body>
 </html>
